# config-manager

./: Architecture.md  CMakeLists.txt  CONTRIBUTING.md  HighLevelDesign.md  LICENSE  README.md
.github/workflows/: ci.yml
backends/json/: CMakeLists.txt
backends/json/include/configmanager/backends/: json_interface.hpp
backends/json/src/: json_interface.cpp
backends/xml/: CMakeLists.txt
backends/xml/include/configmanager/backends/: xml_interface.hpp
backends/xml/src/: xml_interface.cpp
cmake/: ConfigManagerConfig.cmake.in  Dependencies.cmake
docs/: Architecture.md  HighLevelDesign.md  README.md  error-handling.md  faq.md  limitations.md  model-and-paths.md  serialization-backends.md  synchronization.md  tutorial.md  versioning-and-migration.md
examples/: 01_basic_model.cpp  02_versioning_and_migration.cpp  03_relaygate_lifecycle.cpp  04_sensorbridge_xml.cpp  CMakeLists.txt  README.md
examples/data/: relaygate_future.json  relaygate_v1.json  sensorbridge_v1.xml
include/configmanager/: config_interface.hpp  config_model.hpp  config_node.hpp  config_path.hpp  config_runtime.hpp  config_value.hpp  configmanager.hpp  migration_engine.hpp  migration_registry.hpp  result.hpp  version.hpp  version_catalog.hpp  versioned_config.hpp
src/: config_model.cpp  config_node.cpp  config_path.cpp  config_runtime.cpp  config_value.cpp  migration_engine.cpp  migration_registry.cpp  node_arena.hpp  version_catalog.cpp
tests/: CMakeLists.txt  config_model_test.cpp  config_node_test.cpp  config_path_test.cpp  config_runtime_test.cpp  config_value_test.cpp  json_interface_test.cpp  migration_test.cpp  result_test.cpp  version_catalog_test.cpp  xml_interface_test.cpp
